chore: fixing spotless errors